--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>
+            Article One | Lakshya
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>Article One</h3>
+        <div>
+            August 3rd, 2017
+        </div>
+        <div>
+            <p>
+                This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.
+            </p>
+            <p>
+                This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.
+            </p>
+            <p>
+                This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.
+            </p>
+        </div>
+        
+    </body>
+    
 </html>
