--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <a href="/article-one">Home</a>
+            <a href="/article-one">Article-One</a>
         </div>
         <hr/>
         <h3>Article Three</h3>
