--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <style>
             .container{
-                max-width=:800px;
+                max-width: 800px;
                 margin: 0 auto;
                 color:blue;
-                font-family: courier-new;
+                font-family: Courier New;
             }
         </style>
     </head>
