--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -10,6 +10,9 @@
                 margin: 0 auto;
                 color:blue;
                 font-family: Courier New;
+                padding-top: 50;
+                padding-left: 20;
+                padding-right: 20;
             }
         </style>
     </head>
