--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -8,7 +8,7 @@
             .container{
                 max-width: 800px;
                 margin: 0 auto;
-                color:blue;
+                color: #2b6d64;
                 font-family: Courier New;
                 padding-top: 50;
                 padding-left: 20;
