[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -14,7 +14,7 @@
         <div>
             August 3rd, 2017
         </div>
-        <div>
+        <div class="container">
             <p>
                 This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.This is Article One Content.
             </p>
