[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,6 +4,7 @@
             Article Two | Lakshya Sharma
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div>
@@ -11,7 +12,7 @@
         </div>
         <hr/>
         <h3>Article Two</h3>
-        <div>
+        <div class="container">
             August 3rd, 2017
         </div>
         <div>
