--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,17 +4,8 @@
             Article Three | Sharma
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <style>
-            .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color: #2b6d64;
-                font-family: Courier New;
-                padding-top: 50;
-                padding-left: 20;
-                padding-right: 20;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
+        
     </head>
     <body>
     <div class="container">
