[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -13,7 +13,7 @@
         </div>
         <hr/>
         <h3>Article Two</h3>
-        <div class="container">
+        <div>
             August 3rd, 2017
         </div>
         <div>
