--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="madi" class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class="container">
+            <div id="madi" class="center">
+                <img src="https://s-media-cache-ak0.pinimg.com/736x/95/2f/b8/952fb8e9c2a25b538c1347873df8e036--batman-art-batman-drawing.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                Hi, I'm Lakshya
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div >
+                I work at HPE
+            </div>
+            </hr>
+            <div class="footer">
+                
+            </div>
         </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am Lakshya, Sup?
-        </div>
-        <script>
-            alert('Sup? This is a Javascript alert')
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
